# budget-tracker

./: .gitignore  1_Data_Entry.py  2_Analytics.py  README.md  main.py  models.py  pyproject.toml
database/: create_scripts.sql  database_structure.dbml  stored_pocedures.sql
dbt_budget/: README.md  dbt_project.yml
dbt_budget/macros/: generate_schema_name.sql
dbt_budget/models/bi/: fct_balance_history.sql  fct_balance_time_series.sql  fct_current_balance.sql  fct_expense_by_category.sql  fct_income_vs_expense.sql  fct_saving_compare.sql
dbt_budget/models/int/: int_budget_app__account_balances_with_fx.sql  int_budget_app__huf_balance_history.sql  int_budget_app__huf_current_account_balance.sql  int_budget_app__huf_transactions_with_category.sql  int_budget_app__latest_fx_rate.sql
dbt_budget/models/stg/: _src_budget_app.yml  _stg_budget_app.yml  stg_budget_app__accounts.sql  stg_budget_app__balance_history.sql  stg_budget_app__current_account_balance.sql  stg_budget_app__exchange_rates.sql  stg_budget_app__transaction_categories.sql  stg_budget_app__transactions.sql
src/: database_dml.py  database_selector.py  streamlit_components.py  web_data.py
tests/: test_database_functions.py  test_web_data.py
